Dish names have been corrected.

--- a/Korean Dish/tooltip.html
+++ b/Korean Dish/tooltip.html
@@ -13,7 +13,7 @@
    <img width="1000" height="672" src="koreanDish.png" alt="World continents">   
        <!-- First row -->
        <div class="pin pin-down" data-xpos="100" data-ypos="120">     
-          <h2>Seasoned aster</h2>     
+          <h2>Seasoned Aster</h2>     
           <ul>
             <li>Korean name: Chwi Namool (취나물)</li>
             <li>Seasoning: Salt, sesame oil, garlic </li>
@@ -45,7 +45,7 @@
        </div>
 
        <div class="pin pin-down" data-xpos="780" data-ypos="120">     
-          <h2>Seasoned aster</h2>     
+          <h2>Seasoned Zucchini</h2>     
           <ul>
             <li>Korean name: Hobak Namool (호박나물)</li>
             <li>Seasoning: Salt, Garlic, Permented shrimp paste </li>
@@ -56,41 +56,41 @@
 
        <!-- Second row -->
        <div class="pin pin-up" data-xpos="100" data-ypos="450">     
-          <h2>Bellflower roots</h2>     
+          <h2>Bellflower Roots</h2>     
           <ul>
-            <li>Korean name: Chwi Namul (도라지나물)</li>
+            <li>Korean name: Doraji Namul (도라지나물)</li>
             <li>Seasoning: Salt, sesame oil, garlic </li>
           </ul>
        </div>
 
         <div class="pin pin-up" data-xpos="300" data-ypos="450">     
-          <h2>Bellflower roots</h2>     
+          <h2>Mushroom Salad</h2>     
           <ul>
-            <li>Korean name: Chwi Namul (버섯무침)</li>
+            <li>Korean name: Busot Moochim (버섯무침)</li>
             <li>Seasoning: Salt, sesame oil, garlic </li>
           </ul>
        </div>
 
        <div class="pin pin-up" data-xpos="450" data-ypos="550">     
-          <h2>Bellflower roots</h2>     
+          <h2>Grilled Tofu</h2>     
           <ul>
-            <li>Korean name: Chwi Namul (두부구이)</li>
+            <li>Korean name: Doboo Gui (두부구이)</li>
             <li>Seasoning: Salt, sesame oil, garlic </li>
           </ul>
        </div>
 
        <div class="pin pin-up" data-xpos="650" data-ypos="450">     
-          <h2>Bellflower roots</h2>     
+          <h2>Seasoned Seeweed</h2>     
           <ul>
-            <li>Korean name: Chwi Namul (톳나물)</li>
+            <li>Korean name: Tot Namul (톳나물)</li>
             <li>Seasoning: Salt, sesame oil, garlic </li>
           </ul>
        </div>
 
         <div class="pin pin-up" data-xpos="850" data-ypos="400">     
-          <h2>Bellflower roots</h2>     
+          <h2>Stirfried Anchovy</h2>     
           <ul>
-            <li>Korean name: Chwi Namul (멸치볶음)</li>
+            <li>Korean name: Myul Chi Bokum (멸치볶음)</li>
             <li>Seasoning: Salt, sesame oil, garlic </li>
           </ul>
        </div>
@@ -98,9 +98,9 @@
         <!-- Center item -->
 
          <div class="pin pin-up" data-xpos="550" data-ypos="200">     
-          <h2>Bellflower roots</h2>     
+          <h2>Seasoned Spinach</h2>     
           <ul>
-            <li>Korean name: Chwi Namul (시금치나물)</li>
+            <li>Korean name: Shigumchi Namul (시금치나물)</li>
             <li>Seasoning: Salt, sesame oil, garlic </li>
           </ul>
        </div>
